--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <li><a href="#hello">Hello</a></li>
         <li><a href="#get-started">Get Started</a></li>
         <li><a href="https://developers.google.com/web/fundamentals/resources/styleguide/">Style Guide</a></li>
-        <li><a href="/About.html">Style Guide</a></li>
+        <li><a href="/about.html">About</a></li>
       </ul>
     </nav>
 
