--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
       <h4>Navigation</h4>
       <ul>
         <li><a href="/about.html">About</a></li>
+        <li><a href="/portfoglio.html">Portfoglio</a></li>
         <li><a href="/contacts.html">Contacts</a></li>
       </ul>
     </nav>
@@ -56,10 +57,12 @@
     <main>
     
 
-      <h2 id="get-started">Get Started.</h2>
+      <h2 id="about">About.</h2>
+      <h2 id="contacts">Contacts</h2>
+      <h2 id="get-started">Portfoglio</h2>
       <br>
       <img src="http://lorempixel.com/450/200">
-      <p>Read how to <a href="http://developers.google.com/web/starter-kit">Get Started</a> or check out the <a href="https://developers.google.com/web/fundamentals/resources/styleguide/">Style Guide</a>.</p>
+      <p>Read how to <a href="/about.html">Aboutd</a> or check out the <a href="https://developers.google.com/web/fundamentals/resources/styleguide/">Style Guide</a>.</p>
 
 
     </main>
