--- a/index.html
+++ b/index.html
@@ -48,18 +48,16 @@
     <nav class="navdrawer-container promote-layer">
       <h4>Navigation</h4>
       <ul>
-    
-        <li><a href="/about.html">About</a></li>
+       <li><a href="/about.html">About</a></li>
+        <li><a href="/portfoglio.html">Portfoglio</a></li>
         <li><a href="/contacts.html">Contacts</a></li>
       </ul>
     </nav>
 
     <main>
-
       <br>
       <img src="http://lorempixel.com/450/200">
-      <p>Read how to <a href="http://developers.google.com/web/starter-kit">Get Started</a> or check out the <a href="https://developers.google.com/web/fundamentals/resources/styleguide/">Style Guide</a>.</p>
-
+      <p>Read how to <a href="/about.html">Aboutd</a> or check out the <a href="https://developers.google.com/web/fundamentals/resources/styleguide/">Style Guide</a>.</p>
 
     </main>
 
