--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@
     <header class="app-bar promote-layer">
       <div class="app-bar-container">
         <button class="menu"><img src="images/hamburger.svg" alt="Menu"></button>
-        <a href="/index.html"><h1 class="logo">Web <strong>Starter Kit</strong></h1></a>
+        <a href="/"><h1 class="logo">Web <strong>Starter Kit</strong></h1></a>
         <section class="app-bar-actions">
         <!-- Put App Bar Buttons Here -->
         <!-- e.g <button><i class="icon icon-star"></i></button> -->
@@ -54,7 +54,6 @@
       </ul>
     </nav>
 
-    functionnavigator.geolocation.getCurrentPosition(show position);
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2801.220562746098!2d11.876125400000012!3d45.40489170000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda51b1da57ad%3A0x276d56b3e818f51b!2sVia+Roma%2C+Padova+PD!5e0!3m2!1sit!2sit!4v1422270871299" width="100%" height="100%" frameborder="0" style="border:0"></iframe>
     <br>
 
